fix(Header.css): change anchor hover effect to use text-shadow for improved visibility

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -10,5 +10,5 @@ a{
 }
 
 a:hover{
-    box-shadow:6px 6px 12px rebeccapurple;
+    text-shadow:4px 2px 10px rgb(255, 0, 0);
 }
